--- a/projects/details.css
+++ b/projects/details.css
@@ -1,3 +1,8 @@
+#projects-container {
+  margin-top: 5%;
+  justify-content: center;
+}
+
 .project {
   height: 520px;
   cursor: auto;
@@ -5,7 +10,7 @@
 
 .project-card {
   height: 520px;
-  margin: 5vh 5vw 5vh 5vw;
+  margin: 5vh 5vw 0 0;
 }
 
 .project-card table {
